# DBRealtorWeb

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: database.py  main.py  models.py
backend/src/routers/: alerts.py  dashboard.py  listings.py  trends.py
backend/tests/: conftest.py  test_routers.py
docs/: deployment.md  migration.md  progress.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: types.ts  useAlerts.ts  useDashboard.ts  useListings.ts  useNewListingsTrend.ts  useNewPerDay.ts  useTrends.ts
frontend/src/pages/: Alerts.tsx  Dashboard.tsx  Listings.tsx  Trends.tsx
nginx/: nginx.conf  nginx.prod.conf
scripts/: deploy.sh
